--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "react-icons": "^4.8.0",
     "react-typed": "^1.2.0",
     "tailwindcss": "3.3.2"
+  },
+  "devDependencies": {
+    "file-loader": "^6.2.0"
   }
 }
