--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.2",
+    "latest-version": "^7.0.0",
     "next": "13.3.2",
     "postcss": "8.4.23",
-    "react": "^16.14.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-typed": "^1.2.0",
